--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -34,5 +34,8 @@ No sed sonet maiestatis elaboraret, ad erant perpetua partiendo eum. Cu qui quis
 
     <!-- Content Description -->
     <string name="desc_list_item_icon">Item Icon</string>
+    <string name="title_activity_login">Login</string>
+    <string name="hello_world">Hello world!</string>
+    <string name="title_activity_register">RegisterActivity</string>
 
 </resources>
