--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -13,24 +13,29 @@ No sed sonet maiestatis elaboraret, ad erant perpetua partiendo eum. Cu qui quis
     <!-- Nav Drawer Menu Items -->
     <string-array name="nav_drawer_items">
         <item>Portada</item>
+        <item>Perfil</item>
+        <item>Quienes Somos</item>
         <item>Arquitectos</item>
         <item>Noticias</item>
         <item>PhotoBooth</item>
-        <item>Concursos</item>
         <item>Eventos</item>
-        <item>Quienes Somos</item>
+        <item>Concursos</item>
+       
+        
     </string-array>
 
     <!-- Nav Drawer List Item Icons -->
     <!-- Keep them in order as the titles are in -->
     <array name="nav_drawer_icons">
+        <item></item>
         <item>@drawable/ic_profile</item>
+        <item>@drawable/ic_regions</item>
         <item>@drawable/ic_architects</item>
         <item>@drawable/ic_news</item>
         <item>@drawable/ic_photobooth</item>
-        <item>@drawable/ic_contests</item>
         <item>@drawable/ic_events</item>
-        <item>@drawable/ic_regions</item>
+        <item>@drawable/ic_contests</item>
+        
     </array>
 
     <!-- Content Description -->
