--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -9,9 +9,9 @@
     <string name="sca_descripcion">Lorem ipsum dolor sit amet, duo probo facer conceptam at, deleniti constituto ea mea. Ea saepe nostrud eleifend pri. Sit euismod repudiare efficiantur ut, mollis viderer labitur te nec. Pri ad verterem reprehendunt, cu atqui regione persequeris eos. Assum ancillae percipitur te mel, cum paulo nonumy eruditi ex. Ne congue iudico ius, audire deleniti persequeris eum ne.
 
 No sed sonet maiestatis elaboraret, ad erant perpetua partiendo eum. Cu qui quis diam debitis. An nam malis altera consetetur. Tempor adversarium eu vim, ex facete principes mea, te sit quas dolorum. Esse assentior voluptatum usu ne.</string>
-	<string name="take">Foto</string>
-	<string name="day1">Día 1</string>
-	<string name="day2">Día 2</string>
+    <string name="take">Foto</string>
+    <string name="day1">Día 1</string>
+    <string name="day2">Día 2</string>
     <!-- Nav Drawer Menu Items -->
     <string-array name="nav_drawer_items">
         <item>Portada</item>
@@ -22,8 +22,6 @@ No sed sonet maiestatis elaboraret, ad erant perpetua partiendo eum. Cu qui quis
         <item>PhotoBooth</item>
         <item>Eventos</item>
         <item>Concursos</item>
-       
-        
     </string-array>
 
     <!-- Nav Drawer List Item Icons -->
@@ -37,9 +35,6 @@ No sed sonet maiestatis elaboraret, ad erant perpetua partiendo eum. Cu qui quis
         <item>@drawable/ic_photobooth</item>
         <item>@drawable/ic_events</item>
         <item>@drawable/ic_contests</item>
-
-
-        
     </array>
 
     <!-- Content Description -->
@@ -47,5 +42,6 @@ No sed sonet maiestatis elaboraret, ad erant perpetua partiendo eum. Cu qui quis
     <string name="title_activity_login">Login</string>
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_register">RegisterActivity</string>
+    <string name="title_activity_photo_book">PhotoBookActivity</string>
 
 </resources>
