--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -14,7 +14,7 @@ No sed sonet maiestatis elaboraret, ad erant perpetua partiendo eum. Cu qui quis
     <string name="day2">Día 2</string>
     <!-- Nav Drawer Menu Items -->
     <string-array name="nav_drawer_items">
-        <item>Portada</item>
+        <item>Noticias</item>
         <item>Perfil</item>
         <item>Quienes Somos</item>
         <item>Arquitectos</item>
